<resources>
    <string name="app_name">GameBacklogKotlin</string>
    <string name="action_settings">Settings</string>
    <string name="delete_backlog">Delete backlog</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="day">Day</string>
    <string name="title">title</string>
    <string name="platform">Platform</string>
</resources>
