<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UI.AddActivity"
    tools:showIn="@layout/activity_add">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mCWContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:minHeight="200dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".UI.AddActivity"
            tools:showIn="@layout/activity_add">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILTitle"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:hint="@string/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tIETTitle"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILPlatform"
                android:layout_width="330dp"
                android:layout_height="54dp"
                android:layout_marginStart="8dp"
                android:hint="@string/platform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tILTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tIETPlatform"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILDay"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/day"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tILPlatform">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tIETDay"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:maxLength="2" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILMonth"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/month"
                app:layout_constraintStart_toEndOf="@id/tILDay"
                app:layout_constraintTop_toBottomOf="@id/tILPlatform">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tIETMonth"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:maxLength="2" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILYear"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/year"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/tILMonth"
                app:layout_constraintTop_toBottomOf="@id/tILPlatform">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tIETYear"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:maxLength="4" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>